[package]
name = "kimono"
version = "0.0.7"
authors = ["Richard Anaya"]
edition = "2018"
description = "A terminal style toolkit inspired by CSS for elegant TUIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/kimono"
readme="README.md"

[dependencies]
ansi-escapes = "0.1.1"
colored = "2.0.0"
unicode-width = "0.1.9"
